[package]
name = "shdiary-gen"
version = "0.1.0"
edition = "2021"

[dependencies.chrono]
version = "0.4.22"
default-features = false
features = ["std"]

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["webp", "jpeg"]

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]
