[package]
name = "shdiary-gen"
version = "0.1.0"
edition = "2021"

[dependencies.env_logger]
version = "0.9.0"
default-features = false
features = ["humantime", "termcolor"]

[dependencies.log]
version = "0.4.17"
features = ["std"]

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["webp", "jpeg"]

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

[dev-dependencies]
criterion = "0.4.0"
